# RentElektro2

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml
backend_rentelektro/: .dockerignore  Dockerfile  README.backend.md  alembic.ini  docker-compose.backend.yaml  docker-compose.yaml  main.py  prometheus.yml  pyproject.toml  requirements.txt  test.db
backend_rentelektro/alembic/: env.py  migration_env.py
backend_rentelektro/alembic/versions/: 20260328_0001_add_rental_lifecycle_fields.py  20260328_0002_add_renter_seen_at.py
backend_rentelektro/api/api_v1/endpoints/: maintance.py  rentals.py  reviews.py  tools.py  users.py
backend_rentelektro/api/routers/: auth.py
backend_rentelektro/app/: main.py
backend_rentelektro/app/api/: __init__.py
backend_rentelektro/app/api/v1/: router.py
backend_rentelektro/app/core/: chat.py  config.py  database.py  email.py  logging.py  model_utils.py  security.py
backend_rentelektro/app/modules/maintance/: __init__.py  endpoints.py
backend_rentelektro/app/modules/maintenance/: endpoints.py
backend_rentelektro/app/scripts/: export_openapi.py  seed_data.py  upgrade_rentals_schema.py
backend_rentelektro/core/: config.py  database.py  dependencies.py  models.py  mongodb.py  security.py
backend_rentelektro/core/schemas/: rentals.py  reviews.py  tools.py  users.py
backend_rentelektro/crud/: crud_rentals.py  crud_reviews.py  crud_tool.py  crud_user.py
backend_rentelektro/envs/: config.example.env  directus.example.env  example_db.env  mongodb.example.env  postgres.example.env
backend_rentelektro/maintance/: endpoints.py
backend_rentelektro/migrations/: env.py
backend_rentelektro/migrations/versions/: 20260328_0002_initial_schema.py  20260429_0003_add_password_reset_tokens.py  bb16fc5ef791_category_repr.py  dfd6485a79b7_initial_schema.py
backend_rentelektro/rentals/: endpoints.py  handlers.py  models.py  schemas.py
backend_rentelektro/reviews/: endpoints.py  handlers.py  models.py  schemas.py
backend_rentelektro/tests/: conftest.py  registration_test.py  test_user_endpoints.py
backend_rentelektro/tests/rentals/: test_rental_routes.py
backend_rentelektro/tests/reviews/: test_review_routes.py
backend_rentelektro/tests/tools/: test_tool_routes.py
backend_rentelektro/tests/users/: test_auth_routes.py
backend_rentelektro/tools/: endpoints.py  handlers.py  models.py  schemas.py
backend_rentelektro/users/: endpoints.py  handlers.py  models.py  schemas.py
(+149 files in other folders)
