[tool.poetry]
name = "backend-rentelektro"
version = "0.1.0"
description = "Backend service for the RentElektro project."
authors = ["RentElektro Team"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = ">=0.135,<0.136"
uvicorn = ">=0.41,<0.42"
sqlalchemy = ">=2.0.46,<2.1"
alembic = ">=1.16,<2"
gunicorn = ">=23,<24"
python-jose = ">=3.3,<4"
bcrypt = "4.0.1"
passlib = "1.7.4"
prometheus-fastapi-instrumentator = ">=7.1,<8"
asyncpg = ">=0.30,<1"
environ = ">=1.0,<2"
pydantic = {version = ">=2.11,<3", extras = ["email"]}
pydantic-settings = ">=2.12,<3"
psycopg2-binary = ">=2.9.11,<3"
python-multipart = ">=0.0.20,<0.1"
httpx = ">=0.28,<1"
redis = ">=6,<7"
motor = "3.1.2"
pymongo = "4.6.3"

[tool.poetry.group.dev.dependencies]
pytest = ">=8,<9"
ruff = ">=0.12,<0.13"
fastapi-debug-toolbar = "0.6.3"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = [
  "alembic/versions",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
combine-as-imports = true
